add CSS to index

--- a/Index.html
+++ b/Index.html
@@ -1,53 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 02 Grupo 04</title>
-</head>
-<body>
+    <style>
+      img {
+        height: 300px;
+        float: center;
+      }
+      h1 {
+        text-align: center;
+      }
+      h2 {
+        text-align: center;
+      }
+      p {
+        text-align: center;
+      }
+      body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
+  </head>
+  <body>
     <h1>Sinopses dos filmes e séries preferidos de cada integrante:</h1>
 
     <h2>Sinopses</h2>
 
-    <br>
+    <br />
 
     <h2>A viagem de chihiro - Vinícus</h2>
-    <img src="https://br.web.img3.acsta.net/pictures/210/527/21052756_20131024195513383.jpg" alt="">
-    <p>Durante a mudança de casa, uma menina de dez anos se maravilha num mundo de dioses, bruxas e espíritus e onde os humanos são transformados em bestas.</p>
+    <img
+      src="https://br.web.img3.acsta.net/pictures/210/527/21052756_20131024195513383.jpg"
+      alt=""
+    />
+    <p>
+      Durante a mudança de casa, uma menina de dez anos se maravilha num mundo
+      de dioses, bruxas e espíritus e onde os humanos são transformados em
+      bestas.
+    </p>
 
-    <br>
+    <br />
 
     <h2>Simplesmente Acontece - Luísa</h2>
-    <img src="https://br.web.img3.acsta.net/pictures/14/12/11/15/29/051042.jpg" alt="">
-    <p>Simplesmente acontece: Alex e Rosie são amigos inseparáveis que cresceram juntos em Londres, compartilhando entre si suas melhores experiências. Tudo muda quando Alex ganha uma bolsa de estudos e passa a morar nos EUA. Separados, seus caminhos agora são outros. Mas nos tempos de hoje é impossível não se conectar. E, em se tratando de amor, o difícil é fazer as escolhas certas.</p>
-    
+    <img
+      src="https://br.web.img3.acsta.net/pictures/14/12/11/15/29/051042.jpg"
+      alt=""
+    />
+    <p>
+      Simplesmente acontece: Alex e Rosie são amigos inseparáveis que cresceram
+      juntos em Londres, compartilhando entre si suas melhores experiências.
+      Tudo muda quando Alex ganha uma bolsa de estudos e passa a morar nos EUA.
+      Separados, seus caminhos agora são outros. Mas nos tempos de hoje é
+      impossível não se conectar. E, em se tratando de amor, o difícil é fazer
+      as escolhas certas.
+    </p>
 
-    <br>
+    <br />
 
     <h2>ACAMPAMENTO DE FÉRIAS 4 - LUCCAS NETO - Lucas</h2>
-    <img src="https://br.web.img3.acsta.net/pictures/23/01/18/17/03/0257650.jpg" alt="">
-    <p>Luccas e Gi decidem passar suas férias em um acampamento onde acontece a gincana mais famosa do mundo. Porém, chegando lá, o que eram para ser férias de pura alegria e diversão ganham um obstáculo: o fato de que a turma de "implicantes" resolveu ir para o mesmo acampamento que eles.</p>
+    <img
+      src="https://br.web.img3.acsta.net/pictures/23/01/18/17/03/0257650.jpg"
+      alt=""
+    />
+    <p>
+      Luccas e Gi decidem passar suas férias em um acampamento onde acontece a
+      gincana mais famosa do mundo. Porém, chegando lá, o que eram para ser
+      férias de pura alegria e diversão ganham um obstáculo: o fato de que a
+      turma de "implicantes" resolveu ir para o mesmo acampamento que eles.
+    </p>
 
-    <br>
+    <br />
 
     <h2>Super Mario Bros - Camila</h2>
-    <img src="https://br.web.img2.acsta.net/pictures/23/04/03/19/45/2854005.jpg" alt="">
-    <p>Mario e seu irmão Luigi são encanadores do Brooklyn, em Nova York. Um dia, eles vão parar no reino dos cogumelos, governado pela Princesa Peach. O local é ameaçado por Bowser, rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares.</p>
+    <img
+      src="https://br.web.img2.acsta.net/pictures/23/04/03/19/45/2854005.jpg"
+      alt=""
+    />
+    <p>
+      Mario e seu irmão Luigi são encanadores do Brooklyn, em Nova York. Um dia,
+      eles vão parar no reino dos cogumelos, governado pela Princesa Peach. O
+      local é ameaçado por Bowser, rei dos Koopas, que faz de tudo para
+      conseguir reinar em todos os lugares.
+    </p>
 
-    <br>
+    <br />
 
     <h2>O Rei Leão - Assucena</h2>
-    <img src="https://m.media-amazon.com/images/I/91VjLtvtPkL._AC_UF894,1000_QL80_.jpg" alt="">
-    <p>Live action do clássico da Disney, em O Rei Leão, Simba (Donald Glover) é um jovem leão cujo destino é se tornar o rei da selva. Entretanto, uma armadilha elaborada por seu tio Scar (Chiwetel Ejiofor) faz com que Mufasa (James Earl Jones), o atual rei, morra ao tentar salvar o filhote. Consumido pela culpa, Simba deixa o reino rumo a um local distante, onde encontra amigos que o ensinam a mais uma vez ter prazer pela vida.</p>
+    <img
+      src="https://m.media-amazon.com/images/I/91VjLtvtPkL._AC_UF894,1000_QL80_.jpg"
+      alt=""
+    />
+    <p>
+      Live action do clássico da Disney, em O Rei Leão, Simba (Donald Glover) é
+      um jovem leão cujo destino é se tornar o rei da selva. Entretanto, uma
+      armadilha elaborada por seu tio Scar (Chiwetel Ejiofor) faz com que Mufasa
+      (James Earl Jones), o atual rei, morra ao tentar salvar o filhote.
+      Consumido pela culpa, Simba deixa o reino rumo a um local distante, onde
+      encontra amigos que o ensinam a mais uma vez ter prazer pela vida.
+    </p>
 
-    <br>
+    <br />
 
     <h2>Supernatural - João Paulo</h2>
-    <img src="https://cdn.folhape.com.br/upload/dn_arquivo/2020/11/supernatural-series-finale.jpg" alt="">
-    <p>Dois irmãos seguem os passos do pai como caçadores, lutando contra aterradores seres sobrenaturais que vagam pela terra.</p>
+    <img
+      src="https://cdn.folhape.com.br/upload/dn_arquivo/2020/11/supernatural-series-finale.jpg"
+      alt=""
+    />
+    <p>
+      Dois irmãos seguem os passos do pai como caçadores, lutando contra
+      aterradores seres sobrenaturais que vagam pela terra.
+    </p>
 
-    <br>
-
-</body>
+    <br />
+  </body>
 </html>
